--- a/notebooks/Create custom architectures using FLEXible.ipynb
+++ b/notebooks/Create custom architectures using FLEXible.ipynb
@@ -64,15 +64,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def custom_architecture_clients_as_aggregators(clients_ids: list) -> FlexActors :\n",
-    "    if \"server\" in clients_ids:\n",
+    "def custom_architecture_clients_as_aggregators(node_ids: list) -> FlexActors :\n",
+    "    if \"server\" in node_ids:\n",
     "        raise ValueError(\n",
     "            \"The name 'server' is reserved only for the server in a client-server architecture.\"\n",
     "        )\n",
     "\n",
     "    actors = FlexActors()\n",
     "\n",
-    "    for clitent_id in clients_ids:\n",
+    "    for clitent_id in node_ids:\n",
     "        actors[clitent_id] = FlexRole.aggregator_client\n",
     "\n",
     "    actors['server'] = FlexRole.server\n",
@@ -115,20 +115,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def custom_architecture_n_clients_as_aggregators(clients_ids: list, n_clients_as_aggregators) -> FlexActors :\n",
-    "    if \"server\" in clients_ids:\n",
+    "def custom_architecture_n_clients_as_aggregators(node_ids: list, n_clients_as_aggregators) -> FlexActors :\n",
+    "    if \"server\" in node_ids:\n",
     "        raise ValueError(\n",
     "            \"The name 'server' is reserved only for the server in a client-server architecture.\"\n",
     "        )\n",
     "\n",
-    "    n_clients_as_aggregators = min(n_clients_as_aggregators, len(clients_ids))\n",
+    "    n_clients_as_aggregators = min(n_clients_as_aggregators, len(node_ids))\n",
     "\n",
     "    actors = FlexActors()\n",
     "\n",
     "    for client_id in range(n_clients_as_aggregators):\n",
     "        actors[client_id] = FlexRole.aggregator_client\n",
     "\n",
-    "    for client_id in range(n_clients_as_aggregators, len(clients_ids)):\n",
+    "    for client_id in range(n_clients_as_aggregators, len(node_ids)):\n",
     "        actors[client_id] = FlexRole.client\n",
     "\n",
     "    actors['server'] = FlexRole.server\n",
@@ -169,15 +169,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def custom_architecture(clients_ids: list) -> FlexActors :\n",
-    "    if \"server\" in clients_ids:\n",
+    "def custom_architecture(node_ids: list) -> FlexActors :\n",
+    "    if \"server\" in node_ids:\n",
     "        raise ValueError(\n",
     "            \"The name 'server' is reserved only for the server in a client-server architecture.\"\n",
     "        )\n",
     "\n",
     "    import numpy as np\n",
     "\n",
-    "    n_nodes = len(clients_ids)\n",
+    "    n_nodes = len(node_ids)\n",
     "    print(f\"Total number of available clients: {n_nodes}\")\n",
     "    n_clients_aggregators = np.random.randint(low=0, high=n_nodes//2)\n",
     "    print(f\"Clients as aggregators: {n_clients_aggregators}\")\n",
@@ -186,15 +186,15 @@
     "    rest_clients = n_nodes - (n_clients_aggregators + n_clients_servers)\n",
     "    print(f\"Only clients: {rest_clients}\")\n",
     "    actors = FlexActors(\n",
-    "        {clients_ids[client_id]: FlexRole.aggregator_client for client_id in range(n_clients_aggregators)}\n",
+    "        {node_ids[client_id]: FlexRole.aggregator_client for client_id in range(n_clients_aggregators)}\n",
     "    )\n",
     "\n",
     "    actors.update(\n",
-    "        FlexActors({clients_ids[client_id]: FlexRole.server_client for client_id in range(n_clients_aggregators, n_nodes-rest_clients)})\n",
+    "        FlexActors({node_ids[client_id]: FlexRole.server_client for client_id in range(n_clients_aggregators, n_nodes-rest_clients)})\n",
     "    )\n",
     "\n",
     "    actors.update(\n",
-    "        FlexActors({clients_ids[client_id]: FlexRole.client for client_id in range(n_clients_aggregators+n_clients_servers, n_nodes)})\n",
+    "        FlexActors({node_ids[client_id]: FlexRole.client for client_id in range(n_clients_aggregators+n_clients_servers, n_nodes)})\n",
     "    )\n",
     "\n",
     "    if n_clients_servers == 0:\n",
@@ -236,14 +236,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def real_scenario(clients_ids: list, n_aggregators: int) -> FlexActors:\n",
-    "    if \"server\" in clients_ids:\n",
+    "def real_scenario(node_ids: list, n_aggregators: int) -> FlexActors:\n",
+    "    if \"server\" in node_ids:\n",
     "        raise ValueError(\n",
     "            \"The name 'server' is reserved only for the server in a client-server architecture.\"\n",
     "        )\n",
     "\n",
     "    actors = FlexActors(\n",
-    "        {clients_ids[client_id]: FlexRole.client for client_id in clients_ids}\n",
+    "        {node_ids[client_id]: FlexRole.client for client_id in node_ids}\n",
     "    )\n",
     "\n",
     "    actors.update(\n",
