restore n_clients in iid_distribution

--- a/notebooks/Federating a clustering model.ipynb
+++ b/notebooks/Federating a clustering model.ipynb
@@ -51,7 +51,7 @@
     "train_iris = Dataset.from_numpy(X_train, y_train)\n",
     "test_iris = Dataset.from_numpy(X_test, y_test)\n",
     "\n",
-    "federated_iris = FedDataDistribution.iid_distribution(train_iris, n_nodes=5)"
+    "federated_iris = FedDataDistribution.iid_distribution(train_iris, n_clients=5)"
    ]
   },
   {
