--- a/notebooks/Federating a linear regression model.ipynb
+++ b/notebooks/Federating a linear regression model.ipynb
@@ -54,7 +54,7 @@
     "train_diabetes = Dataset.from_numpy(X_train, y_train)\n",
     "test_diabetes = Dataset.from_numpy(X_test, y_test)\n",
     "\n",
-    "federated_diabetes = FedDataDistribution.iid_distribution(train_diabetes, n_nodes=5)"
+    "federated_diabetes = FedDataDistribution.iid_distribution(train_diabetes, n_clients=5)"
    ]
   },
   {
