--- a/notebooks/flex_text_classification_tensorflow_demo.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_demo.ipynb
@@ -135,7 +135,7 @@
    "source": [
     "from flex.data import FedDataDistribution\n",
     "\n",
-    "flex_dataset = FedDataDistribution.iid_distribution(flex_data, n_nodes=2)"
+    "flex_dataset = FedDataDistribution.iid_distribution(flex_data, n_clients=2)"
    ]
   },
   {
