replace classes with labels and client with node everywhere, also replace client_names with node_ids

--- a/notebooks/Create custom architectures using FLEXible.ipynb
+++ b/notebooks/Create custom architectures using FLEXible.ipynb
@@ -298,7 +298,7 @@
     "def define_model(**kwargs):\n",
     "    from copy import deepcopy\n",
     "    input_shape = kwargs['input_shape']\n",
-    "    n_classes = kwargs['n_classes']\n",
+    "    n_labels = kwargs['n_classes']\n",
     "    model = tf.keras.Sequential()\n",
     "    model.add(tf.keras.layers.Input(shape=input_shape))\n",
     "    model.add(tf.keras.layers.Dense(units=64))\n",
