Added the architecture file to differenciate it from the FlexPool. Now in FlexPool we only talk about pools, and use the work architecture outside.

--- a/notebooks/Create custom architectures using FLEXible.ipynb
+++ b/notebooks/Create custom architectures using FLEXible.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Create custom federated architectures using FLEXible\n",
     "\n",
-    "In this notebook we show how to create customs architetures when working FLEXible. We hope that this notebook will help users to learn how to use the `FlexPool` class in case they want to create different architectures from the two available in the `FlexPool` class. Those methods are, `client_server_architecture` and `p2p_architecture`, and are the most probable type of architectures that might be found during a federated learning experiment, but it might be interesting to create another architecture."
+    "In this notebook we show how to create customs architetures when working FLEXible. We hope that this notebook will help users to learn how to use the `FlexPool` class in case they want to create different architectures from the two available in the `FlexPool` class. Those methods are, `client_server_pool` and `p2p_pool`, and are the most probable type of architectures that might be found during a federated learning experiment, but it might be interesting to create another architecture."
    ]
   },
   {
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "from flex.pool import FlexPool\n",
-    "from flex.actors import FlexActors, FlexRole\n",
+    "from flex.actors import FlexActors, FlexRole, client_server_architecture, p2p_architecture\n",
     "from flex.data import FedDataDistribution, Dataset\n",
     "\n",
     "from sklearn.datasets import load_iris\n",
@@ -342,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Usually, we are going to work with the client-server architecture, as is the most common arquitecture in Federated Learning, so we can just simply use the classmethod available in `FlexPool`. Using the `client_server_architecture`or the `p2p_architecture`functions, we have to pass as argument the function that initilize the server model. "
+    "Usually, we are going to work with the client-server architecture, as is the most common arquitecture in Federated Learning, so we can just simply use the classmethod available in `FlexPool`. Using the `client_server_pool`or the `p2p_pool`functions, we have to pass as argument the function that initilize the server model. "
    ]
   },
   {
@@ -351,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pool = FlexPool.client_server_architecture(fed_dataset=federated_iris, init_func=define_model, input_shape=iris.data.shape[1], n_classes=len(set(iris.target)))\n",
+    "pool = FlexPool.client_server_pool(fed_dataset=federated_iris, init_func=define_model, input_shape=iris.data.shape[1], n_classes=len(set(iris.target)))\n",
     "\n",
     "clients = pool.clients\n",
     "aggregators = pool.aggregators\n",
@@ -391,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
