--- a/notebooks/Federating a clustering model.ipynb
+++ b/notebooks/Federating a clustering model.ipynb
@@ -131,7 +131,7 @@
     "\n",
     "The implementation of a federated algorithm in FLEXible always begins with the same steps: \n",
     "1. Defining a function to initialize the model in the server node. Note that function `build_server_model` is decorated with decorator `init_server_model`, in this way, we only need to care about loading a model in a FlexModel object.\n",
-    "1. Creating an architecture, in this case, a client server architecture by means of `client_server_architecture`. Note that, the number of clients is provided in `federated_iris` and it can be retrieved using `len(federated_iris)`. \n",
+    "1. Creating an architecture, in this case, a client server architecture by means of `client_server_pool`. Note that, the number of clients is provided in `federated_iris` and it can be retrieved using `len(federated_iris)`. \n",
     "\n",
     "The `FlexPool` generated contains 20 clients an 1 server, which is also an aggregator node. Remember that nodes in a `FlexPool` communicate with each other using the `map` function."
    ]
@@ -155,7 +155,7 @@
     "    return flex_model\n",
     "\n",
     "\n",
-    "p = FlexPool.client_server_architecture(\n",
+    "p = FlexPool.client_server_pool(\n",
     "    federated_iris, init_func=build_server_model, n_clusters=3\n",
     ")\n",
     "\n",
@@ -337,7 +337,7 @@
    "outputs": [],
    "source": [
     "n_rounds = 5\n",
-    "p = FlexPool.client_server_architecture(\n",
+    "p = FlexPool.client_server_pool(\n",
     "    federated_iris, init_func=build_server_model, n_clusters=3\n",
     ")\n",
     "servers = p.servers\n",
@@ -393,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
