--- a/notebooks/Federating a linear regression model.ipynb
+++ b/notebooks/Federating a linear regression model.ipynb
@@ -123,7 +123,7 @@
     "\n",
     "The implementation of a federated algorithm in FLEXible always begins with the same steps: \n",
     "1. Defining a function to initialize the model in the server node. Note that function `build_server_model` is decorated with decorator `init_server_model`, in this way, we only need to care about loading a model in a FlexModel object.\n",
-    "1. Creating an architecture, in this case, a client server architecture by means of `client_server_architecture`. Note that, the number of clients is provided in `federated_diabetes` and it can be retrieved using `len(federated_diabetes)`. \n",
+    "1. Creating an architecture, in this case, a client server architecture by means of `client_server_pool`. Note that, the number of clients is provided in `federated_diabetes` and it can be retrieved using `len(federated_diabetes)`. \n",
     "\n",
     "The `FlexPool` generated contains 20 clients an 1 server, which is also an aggregator node. Remember that nodes in a `FlexPool` communicate with each other using the `map` function."
    ]
@@ -146,7 +146,7 @@
     "    return flex_model\n",
     "\n",
     "\n",
-    "p = FlexPool.client_server_architecture(federated_diabetes, init_func=build_server_model)\n",
+    "p = FlexPool.client_server_pool(federated_diabetes, init_func=build_server_model)\n",
     "\n",
     "clients = p.clients\n",
     "servers = p.servers\n",
@@ -323,7 +323,7 @@
    "outputs": [],
    "source": [
     "n_rounds = 1\n",
-    "p = FlexPool.client_server_architecture(federated_diabetes, init_func=build_server_model)\n",
+    "p = FlexPool.client_server_pool(federated_diabetes, init_func=build_server_model)\n",
     "servers = p.servers\n",
     "clients = p.clients\n",
     "aggregators = p.aggregators\n",
