--- a/notebooks/OUTDATED_flex_text_generation_torch_demo.ipynb
+++ b/notebooks/OUTDATED_flex_text_generation_torch_demo.ipynb
@@ -364,7 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pool = FlexPool.client_server_architecture(fed_dataset=new_fld)"
+    "pool = FlexPool.client_server_pool(fed_dataset=new_fld)"
    ]
   },
   {
