--- a/notebooks/Two ways of updating weights with FLEXible.ipynb
+++ b/notebooks/Two ways of updating weights with FLEXible.ipynb
@@ -102,7 +102,7 @@
     "\n",
     "    return server_flex_model\n",
     "\n",
-    "flex_pool = FlexPool.client_server_architecture(flex_dataset, init_func=build_server_model)\n",
+    "flex_pool = FlexPool.client_server_pool(flex_dataset, init_func=build_server_model)\n",
     "\n",
     "clients = flex_pool.clients\n",
     "servers = flex_pool.servers\n",
@@ -459,7 +459,7 @@
     "    gc.collect()\n",
     "\n",
     "def train_n_rounds(n_rounds, clients_per_round=20):  \n",
-    "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=build_server_model)\n",
+    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=build_server_model)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
@@ -515,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
