--- a/notebooks/flex_text_classification_huggingface_using_pure_torch_demo.ipynb
+++ b/notebooks/flex_text_classification_huggingface_using_pure_torch_demo.ipynb
@@ -167,7 +167,7 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=define_model)"
+    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=define_model)"
    ]
   },
   {
@@ -407,7 +407,7 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, clients_per_round=2):\n",
-    "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=define_model)\n",
+    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=define_model)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds+1}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
