--- a/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
@@ -120,7 +120,7 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=define_model)"
+    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=define_model)"
    ]
   },
   {
@@ -315,7 +315,7 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, batch_size, epochs):\n",
-    "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=define_model)\n",
+    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=define_model)\n",
     "    pool.servers.map(copy_model_to_clients, pool.clients, verbose=1)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
