--- a/notebooks/Federated CIFAR10 PT example with primitives.ipynb
+++ b/notebooks/Federated CIFAR10 PT example with primitives.ipynb
@@ -122,7 +122,7 @@
     "\n",
     "    return server_flex_model\n",
     "\n",
-    "flex_pool = FlexPool.client_server_architecture(flex_dataset, init_func=build_server_model)\n",
+    "flex_pool = FlexPool.client_server_pool(flex_dataset, init_func=build_server_model)\n",
     "\n",
     "clients = flex_pool.clients\n",
     "servers = flex_pool.servers\n",
@@ -410,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
