--- a/notebooks/flex_text_classification_tensorflow_demo.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_demo.ipynb
@@ -199,7 +199,7 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=initialize_server_model)\n",
+    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=initialize_server_model)\n",
     "clients = flex_pool.clients\n",
     "server = flex_pool.servers\n",
     "print(f\"Server node is indentified by {server.actor_ids}\")\n",
@@ -486,7 +486,7 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, batch_size, epochs):\n",
-    "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=initialize_server_model)\n",
+    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=initialize_server_model)\n",
     "    pool.servers.map(deploy_model_to_clients, pool.clients)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
@@ -533,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
