--- a/notebooks/flex_text_classification_tensorflow_simplified.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_simplified.ipynb
@@ -146,7 +146,7 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=define_model())"
+    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=define_model())"
    ]
   },
   {
@@ -257,7 +257,7 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, batch_size, epochs):  \n",
-    "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=define_model())\n",
+    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=define_model())\n",
     "    pool.servers.map(deploy_server_model_tf, pool.clients)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
